; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Configlist_eat.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Configlist_eat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config = type { i64, i64, i64, %struct.config* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Configlist_eat(%struct.config* %0) #0 {
  %2 = alloca %struct.config*, align 8
  %3 = alloca %struct.config*, align 8
  store %struct.config* %0, %struct.config** %2, align 8
  br label %4

4:                                                ; preds = %35, %1
  %5 = load %struct.config*, %struct.config** %2, align 8
  %6 = icmp ne %struct.config* %5, null
  br i1 %6, label %7, label %37

7:                                                ; preds = %4
  %8 = load %struct.config*, %struct.config** %2, align 8
  %9 = getelementptr inbounds %struct.config, %struct.config* %8, i32 0, i32 3
  %10 = load %struct.config*, %struct.config** %9, align 8
  store %struct.config* %10, %struct.config** %3, align 8
  %11 = load %struct.config*, %struct.config** %2, align 8
  %12 = getelementptr inbounds %struct.config, %struct.config* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp eq i64 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = load %struct.config*, %struct.config** %2, align 8
  %18 = getelementptr inbounds %struct.config, %struct.config* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %19, 0
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert(i32 %21)
  %23 = load %struct.config*, %struct.config** %2, align 8
  %24 = getelementptr inbounds %struct.config, %struct.config* %23, i32 0, i32 2
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %32

27:                                               ; preds = %7
  %28 = load %struct.config*, %struct.config** %2, align 8
  %29 = getelementptr inbounds %struct.config, %struct.config* %28, i32 0, i32 2
  %30 = load i64, i64* %29, align 8
  %31 = call i32 @SetFree(i64 %30)
  br label %32

32:                                               ; preds = %27, %7
  %33 = load %struct.config*, %struct.config** %2, align 8
  %34 = call i32 @deleteconfig(%struct.config* %33)
  br label %35

35:                                               ; preds = %32
  %36 = load %struct.config*, %struct.config** %3, align 8
  store %struct.config* %36, %struct.config** %2, align 8
  br label %4

37:                                               ; preds = %4
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @SetFree(i64) #1

declare dso_local i32 @deleteconfig(%struct.config*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
